Change the ImageLoder's methods.

--- a/StyleGAN1.ipynb
+++ b/StyleGAN1.ipynb
@@ -439,7 +439,7 @@
     "    def loadImages(batch_size, folder_path, size):\n",
     "        imgs = ImageFolder(folder_path, transform=transforms.Compose([\n",
     "            transforms.Resize(int(size)),\n",
-    "            transforms.RandomHorizontalFlip(),\n",
+    "            #transforms.RandomHorizontalFlip(),\n",
     "            transforms.RandomCrop(size),\n",
     "            #transforms.RandomRotation(degrees=30),\n",
     "            #transforms.ColorJitter(brightness=0, contrast=0.5, saturation=0.5),\n",
@@ -792,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
