--- a/StyleGAN2-2-ADA.ipynb
+++ b/StyleGAN2-2-ADA.ipynb
@@ -546,7 +546,6 @@
     "        imgs = ImageFolder(folder_path, transform=transforms.Compose([\n",
     "            transforms.Resize(int(size)),\n",
     "            transforms.RandomCrop(size),\n",
-    "            transforms.RandomHorizontalFlip(),\n",
     "            transforms.ToTensor()\n",
     "        ]))\n",
     "        return DataLoader(imgs, batch_size=batch_size, shuffle=True, drop_last=True)\n",
@@ -557,6 +556,7 @@
     "        size = images.size(-1)\n",
     "        images = [img for img in images.cpu()]\n",
     "        images = [transforms.ToPILImage()(img) for img in images]\n",
+    "        images = [transforms.RandomHorizontalFlip()(img) for img in images]\n",
     "        if random.uniform(0, 1) <= p:\n",
     "            images = [transforms.ColorJitter(brightness=0, contrast=0.5, saturation=0.5)(img) for img in images]\n",
     "        if random.uniform(0, 1) <= p:\n",
@@ -882,7 +882,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
